[package]
authors = ["Ivan Dyachenko <inbox@ivandyachenko.ru>"]
name = "crankshaft"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embassy-sync = "0.6.1"
embassy-futures = "0.1.1"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.4.0", features = ["tick-hz-100_000"] }
embassy-stm32 = { version = "0.2.0", features = [
    "exti",
    "memory-x",
    "unstable-pac",
    "time-driver-tim2",
    "stm32f091rc",
] }
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", optional = true }
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }

[lib]
test = false

[[bin]]
name = "crankshaft"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe/print-defmt",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
